<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="pass">Contraseña</string>
    <string name="button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">, crea una aquí</string>
    <string name="email">Correo</string>
    <string name="name">Nombre</string>
    <string name="confirm_pass">Confirmar contraseña</string>
    <string name="button_create_account">Crear</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
